[project]
name = "gauges_project"
version = "0.1.0"
description = "A project for fetching and storing gauge data."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "sqlmodel",
    "requests",
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-hooks = true

[tool.hatch.build.targets.sdist]
include = [
    "gauges/**/*",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
include = [
    "gauges/**/*",
    "pyproject.toml",
]